--- a/themes/hugo-future-imperfect/static/css/monokai-sublime.css
+++ b/themes/hugo-future-imperfect/static/css/monokai-sublime.css
@@ -35,7 +35,7 @@ Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-lic
 .hljs-title,
 .hljs-section,
 .hljs-selector-class {
-  color: #f92672;
+  color: #FB269B;
 }
 
 .hljs-strong {
@@ -50,7 +50,7 @@ Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-lic
 .hljs-selector-tag,
 .hljs-name,
 .hljs-attr {
-  color: #f92672;
+  color: #FB269B;
 }
 
 .hljs-symbol,
@@ -73,7 +73,7 @@ Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-lic
 .hljs-addition,
 .hljs-variable,
 .hljs-template-variable {
-  color: #A62B1D;
+  color: #CC2816;
 }
 
 .hljs-comment,
